[gd_scene load_steps=6 format=2]

[ext_resource path="res://objects/PhoneSystem.gd" type="Script" id=1]
[ext_resource path="res://sound/phone_vibrate.ogg" type="AudioStream" id=2]
[ext_resource path="res://sound/correct_answer.ogg" type="AudioStream" id=3]
[ext_resource path="res://sound/wrong_answer.ogg" type="AudioStream" id=4]
[ext_resource path="res://music/assets/warning.ogg" type="AudioStream" id=5]

[node name="PhoneSystem" type="Node"]
script = ExtResource( 1 )

[node name="Timer_GhostTimer" type="Timer" parent="."]
one_shot = true

[node name="Timer_Warning" type="Timer" parent="."]
one_shot = true

[node name="Timer_NewMessage" type="Timer" parent="."]
one_shot = true

[node name="Audio_Vibrate" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
bus = "SFX"

[node name="Audio_CorrectAnswer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "SFX"

[node name="Audio_WrongAnswer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "SFX"

[node name="Audio_Warning" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
bus = "BGM"
[connection signal="timeout" from="Timer_GhostTimer" to="." method="_on_Timer_GhostTimer_timeout"]
[connection signal="timeout" from="Timer_Warning" to="." method="_on_Timer_Warning_timeout"]
[connection signal="timeout" from="Timer_NewMessage" to="." method="_on_Timer_NewMessage_timeout"]
